--- a/docker/nginx/usr/share/nginx/html/index.html
+++ b/docker/nginx/usr/share/nginx/html/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Welcome to nginx on the prairie!</title>
+<title>Welcome to nginx!</title>
 <style>
     body {
         width: 35em;
@@ -11,7 +11,7 @@
 </style>
 </head>
 <body>
-<h1>Welcome to nginx on the prairie!</h1>
+<h1>Welcome to nginx!</h1>
 <p>If you see this page, the nginx web server is successfully installed and
 working. Further configuration is required.</p>
 
